<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/item_panel_image_view"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/panel_type">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_type_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/panel_type"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_power_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/power"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_capacity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/capacity"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_capacity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_usage_period_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/usage_period"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/item_panel_usage_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </com.google.android.material.textview.MaterialTextView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"/>

</LinearLayout>